# Gomoku

./: CMakeLists.txt  Computer.cpp  Computer.hpp  Game.cpp  Game.hpp  Human.cpp  Human.hpp  README.md  Resource.hpp  Resource.rc  UserInterface.cpp  UserInterface.hpp  main.cpp
.github/workflows/: cmake.yml
